--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bienvendio a RUTINAP"
+        android:text="Bienvenido a RUTINAP"
         android:textSize="30dp"
         android:textStyle="bold"
 
